# CUDA-CCL

./: .gitattributes  .gitignore  LICENCE  README.md
algorithm/: CMakeLists.txt
algorithm/src/: CMakeLists.txt  main.cu  serial.cxx
algorithm/src/alg/: KE.cu  UFTree.cuh
algorithm/src/include/: Matrix.cuh  alg_runner.cuh  timer.cxx
perf/: CPU_CCL.out  GPU_CCL.out
report/: bibliography.bib  main.typ
validation/: convert_image.py  val.py  validation.ipynb  visual.py
validation/data/: KE_labels_1.txt  KE_labels_2.txt  KE_labels_3.txt  KE_labels_4.txt  KE_labels_debug.txt  labels_1.txt  labels_2.txt  labels_3.txt  labels_4.txt  labels_debug.txt
validation/img_input/: pixels_1.txt  pixels_2.txt  pixels_3.txt  pixels_4.txt  pixels_debug.txt
